Fixes content overflow in chrome

--- a/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
@@ -1,4 +1,6 @@
 .gn {
+  display: table;
+  width: 100%;
   position: relative;
   font-size: 14px;
   font-family: Roboto, sans-serif;
